kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: quotesdb
  labels:
    app: quotesdb
    environment: production
