kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: quotesdb-service
  namespace: quotesdb
  labels:
    app: quotesdb
spec:
  type: ClusterIP
  selector:
    app: quotesdb
  ports:
  - port: 80
    targetPort: 3000
    protocol: TCP
    name: http
---
apiVersion: v1
kind: Service
metadata:
  name: quotesdb-nodeport
  namespace: quotesdb
  labels:
    app: quotesdb
spec:
  type: NodePort
  selector:
    app: quotesdb
  ports:
  - port: 80
    targetPort: 3000
    nodePort: 30080
    protocol: TCP
    name: http
